[tool.poetry]
name = "colosseum_website"
version = "0.1.0"
description = "Website for colosseum"
authors = ["h3nnn4n <colosseum@h3nnn4n.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.0"
Django = "^3.2.10"
psycopg2 = "^2.9.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
whitenoise = "^5.3.0"
django-extensions = "^3.1.5"
djangorestframework = "^3.12.4"
django-crispy-forms = "^1.13.0"
django-bootstrap4 = "^21.1"
python-dotenv = "^0.19.2"
django-storages = "^1.12.3"
boto3 = "^1.20.6"
simple-elo = "^0.1.1"
ipdb = "^0.13.9"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
notebook = "^6.4.6"
ipywidgets = "^7.6.5"
django-debug-toolbar = "^3.2.4"
django-redis = "^5.1.0"
django-memoize = "^2.3.1"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
ipdb = "^0.13.9"
factory-boy = "^3.2.1"
freezegun = "^1.1.0"
pytest-django = "^4.4.0"
pytest-xdist = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
