[tool.poetry]
name = "colosseum_website"
version = "0.1.0"
description = "Website for colosseum"
authors = ["h3nnn4n <colosseum@h3nnn4n.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
Django = "4.0.7"
psycopg2 = "^2.9.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
whitenoise = "^5.3.0"
django-extensions = "^3.1.5"
djangorestframework = "^3.12.4"
django-crispy-forms = "^1.13.0"
django-bootstrap4 = "^21.1"
python-dotenv = "^0.19.2"
django-storages = "^1.12.3"
boto3 = "^1.20.6"
ipdb = "^0.13.9"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
notebook = "^6.4.12"
ipywidgets = "^7.6.5"
django-debug-toolbar = "^3.2.4"
django-redis = "^5.1.0"
django-memoize = "^2.3.1"
celery = "^5.2.1"
python-magic = "^0.4.24"
influxdb = "^5.3.1"
django-cprofile-middleware = "^1.0.5"
wiki = "^0.9"
humanize = "^3.13.1"
sentry-sdk = "^1.5.1"
pytest-sugar = "^0.9.4"
python-decouple = "^3.5"
tld = "^0.12.6"
fontawesome-free = "^5.15.4"
django-cors-headers = "^3.11.0"
django-loki-reloaded = "1.0.3"
mistune = "2.0.3"
django-csp = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
ipdb = "^0.13.9"
factory-boy = "^3.2.1"
freezegun = "^1.1.0"
pytest-django = "^4.4.0"
pytest-xdist = "^2.4.0"
black = "^22.3.0"
click = "^8.1.3"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
